# go/router/v1/sys.go
@@ -7,8 +7,13 @@ import (
 
 func LoadSys(e *gin.RouterGroup)  {
 	{
+		// 用户
 		e.GET("/user", ControllerSys.UserList)
 		e.GET("/user/:id", ControllerSys.UserSinge)
+		e.PUT("/user/:id", ControllerSys.UserUpdate)
 		e.POST("/user", ControllerSys.UserCreate)
+		e.DELETE("/user/:id", ControllerSys.UserDel)
+		// 部门
+		e.GET("/depart", ControllerSys.DepartList)
 	}
 }
